Parse.js is built

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="w-100"></div>
-            <div class="col">col</div>
-            <div class="col">col</div>
+        <div id="row" class="row">
+            <div class="col">
+                1 of 3
+            </div>
+            <div class="col">
+                1 of 3
+            </div>
+            <div class="col">
+                1 of 3
+            </div>
         </div>
     </div>
 
@@ -58,5 +62,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="Javascripts/loaders.js"></script>
 <script src="Javascripts/caller.js"></script>
+    <script src="Javascripts/parse.js"></script>
 </body>
 </html>
