--- a/index.html
+++ b/index.html
@@ -14,22 +14,13 @@
         <a class="navbar-brand" href="#">Navbar</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
                 <li class="nav-item dropdown">
                     <div class="dropdown show">
                         <a class="btn btn-secondary dropdown-toggle" href="https://example.com" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Dropdown link
                         </a>
 
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <div id="categories" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" id="Fireworks" href="#">Fireworks</a>
                             <a class="dropdown-item" id="Demolition" href="#">Demolition</a>
                             <a class="dropdown-item" id="Fishing" href="#">Fishing</a>
@@ -62,6 +53,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="Javascripts/loaders.js"></script>
 <script src="Javascripts/caller.js"></script>
-    <script src="Javascripts/parse.js"></script>
+<script src="Javascripts/output.js"></script>
+
 </body>
 </html>
