Products are printing out

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         </a>
 
                         <div id="categories" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" id="Fireworks" href="#">Fireworks</a>
-                            <a class="dropdown-item" id="Demolition" href="#">Demolition</a>
-                            <a class="dropdown-item" id="Fishing" href="#">Fishing</a>
-                            <a class="dropdown-item" id="Bank-Heists" href="#">Bank Heists</a>
+                            <a class="dropdown-item" id="0" href="#">Fireworks</a>
+                            <a class="dropdown-item" id="1" href="#">Demolition</a>
+                            <a class="dropdown-item" id="2" href="#">Fishing</a>
+                            <a class="dropdown-item" id="3" href="#">Bank Heists</a>
 
                         </div>
                     </div>
@@ -33,17 +33,7 @@
         </div>
     </nav>
     <div class="container">
-        <div id="row" class="row">
-            <div class="col">
-                1 of 3
-            </div>
-            <div class="col">
-                1 of 3
-            </div>
-            <div class="col">
-                1 of 3
-            </div>
-        </div>
+
     </div>
 
 
