--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <nav class=" sticky-top navbar-collapse navbar navbar-toggleable-md navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class=" sticky-top navbar-collapse navbar navbar-toggleable-md navbar-light bg-faded"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+        <a class="navbar-brand" href="#">Acme Explosives</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
@@ -32,7 +32,10 @@
             </ul>
         </div>
     </nav>
+    <div class="category"></div>
+    <div class="type"></div>
     <div class="container">
+
 
     </div>
 
@@ -41,8 +44,11 @@
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<script src="Javascripts/loaders.js"></script>
-<script src="Javascripts/caller.js"></script>
+<script src="Javascripts/categories.js"></script>
+    <script src="Javascripts/types.js"></script>
+    <script src="Javascripts/products.js"></script>
+
+    <script src="Javascripts/caller.js"></script>
 <script src="Javascripts/output.js"></script>
 
 </body>
